# determinant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  app.py  dump.rdb  output_sql_qa.jsonl  pyproject.toml  requirements.txt  requirements_.txt  setup.py
.github/workflows/: deploy-east.yml  deploy.yml  pylint.yml
data/privacy/: utils.py
deployment/: async_app_serve.yaml  cluster_service_account.yaml  model-composition.yaml  nginx-deploy.yaml  ray-cluster.autoscaler.large.yaml  ray-cluster.autoscaler.yaml  static-ray-cluster.with-fault-tolerance.yaml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/notebooks/: Dolly_end_to_end.ipynb  Dolly_gradio.ipynb  Retrieval_Augmented_Question_Answering.ipynb  example.ipynb  fine_tune_gpt2.ipynb
finetune/: README.md  alpaca-lora-fine-tune.ipynb  jupyter_notebook_config.py  requirements.txt
notebooks/: Dolly.ipynb  Dolly_end_to_end.ipynb  Retrieval_Augmented_Question_Answering.ipynb  Untitled.ipynb  fine_tune_gpt2.ipynb
python/: app.py  async_app.py  async_app_fan.py  async_rag_app.py  construct_dag.py  ingest_slack.py  logger.py  ray_cluster_deploy.md  setup.py
python/data/: privacy_processor.py
python/memory/: redis_manager.py
python/serve/: gradio_app.py  summarizer.py  sumtranslator.py  (+2 more)
scripts/: bind-ksa  build  deploy  local-ray  up
slack-bot/: pyproject.toml
slack-bot/slack_bot/: app.py
slack-bot/slack_bot/data/: privacy_processor.py
src/: async_app.py  embeddings.py  logger.py  prompt.py  utils.py  vector_db.py
tests/: test_mpt.py
(+30 files in other folders)
