[tool.poetry]
[tool.poetry]
name = "slack-bot"
version = "0.1.0"
description = ""
authors = ["hs <none>"]
readme = "README.md"
packages = [{include = "slack_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.18.0"
transformers = {extras = ["agents"], version = "^4.30.2"}
huggingface-hub = "^0.16.4"
bs4 = "^0.0.1"
boto3 = "^1.28.2"
spacy = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
